# godot-das

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SCsub  config.py  register_types.cpp  register_types.h
_vscode_files/: c_cpp_properties.json  launch.json  settings.json  tasks.json
boost/: .gdignore  daslib  godot.das  godot_cast.das  godot_cast_gen.das  godot_casts_gen.das  godot_macros.das  godot_signals.das  godot_signals_gen.das  godot_utils.das
demo/: Bar.das  Foo.das  demo.gdextension  icon.svg.import  main.das  main.tscn  project.godot
docs/: das_script.md  das_script_instance.md  das_script_language.md  why_not_gdextension.md
src/: das_resource_format_loader.cpp  das_resource_format_loader.h  das_resource_format_saver.cpp  das_resource_format_saver.h  das_resource_io.cpp  das_resource_io.h  das_script.cpp  das_script.h  das_script_instance.cpp  das_script_instance.h  das_script_language.cpp  das_script_language.h  das_templates.h  entry_point.cpp  generate_bindings.cpp  generate_bindings.h  godot.das  godot_all_includes.h  godot_functions_extra.cpp  godot_functions_gen.cpp  godot_functions_macro.h  godot_functions_wrapper.h  godot_module.cpp  godot_module.h  godot_module_alt_compile.cpp  godot_types_aliases.cpp  godot_types_aliases.h  godot_types_extra.cpp  godot_types_extra.h  godot_types_gen.cpp  godot_types_gen.h  godot_types_macro.h  godot_utils.cpp  init_dascript.cpp  init_dascript.h  init_daslang.cpp  init_daslang.h  tutorial00.cpp  tutorial00.h  types_and_funcs.h
vscode_files/: launch.json  settings.json  tasks.json
(+21 files in other folders)
